syntax = "proto3";
import "google/protobuf/empty.proto";
package authentication;

message UserLoginRequest {
  string userId = 1;
  string clientId = 2;
}

message UserCreateRequest {
  string email = 1;
  optional string password = 2;
  bool verify = 3;
  optional string anonymousId = 4;
  optional string userData = 5;
}

message UserCreateByUsernameRequest {
  string username = 1;
  optional string password = 2;
  optional string anonymousId = 3;
}

message UserChangePass {
  string email = 1;
  optional string password = 2;
}

message UserDeleteRequest {
  string userId = 1;
}

message GetTeamRequest {
  optional string teamId = 1;
}

message CreateTeamRequest {
  string name = 1;
  optional string parentTeam = 2;
  optional bool isDefault = 3;
}

message TeamDeleteRequest {
  string teamId = 1;
}

message UserLoginResponse {
  string accessToken = 1;
  optional string refreshToken = 2;
}

message UserDeleteResponse {
  string message = 1;
}

message UserCreateResponse {
  optional string password = 1;
}

message Team {
  string id = 1;
  string name = 2;
  string parentTeam = 3;
  bool isDefault = 4;
}

message TeamDeleteResponse {
  string message = 1;
}

message ModifyTeamMembersRequest {
  string teamId = 1;
  repeated string memberIds = 2;
}

message ValidateAccessTokenRequest {
  string accessToken = 1;
  optional string path = 2;
}

message ValidateAccessTokenResponse {
  enum Status {
    AUTHENTICATED = 0;
    UNAUTHENTICATED = 1;
    REQUIRES_2FA = 2;
    USER_BLOCKED = 3;
  }
  Status status = 1;
  optional string userId = 2;
}

message AnonymousUserCreateRequest {
  string clientId = 1;
}

message UserModifyStatusRequest {
  string id = 1;
  bool active = 2;
}

message UserModifyStatusResponse {
  string message = 1;
}

message InvitationDeleteRequest {
  string teamId = 1;
  string email = 2;
}

message InvitationDeleteResponse {
  string message = 1;
}

message InviteUserToTeamRequest {
  string teamId = 1;
  string email = 2;
  string role = 3;
  string inviterUserId = 5;
  optional string redirectUri = 4;
  optional string userData = 6;
}

message InviteUserToTeamResponse {
  string invitationToken = 1;
}

message SwitchParentTeamRequest {
  string teamId = 1;
  string newParentTeamId = 2;
}

service Authentication {
  rpc UserLogin(UserLoginRequest) returns (UserLoginResponse);
  rpc UserCreate(UserCreateRequest) returns (UserCreateResponse);
  rpc UserCreateByUsername(UserCreateByUsernameRequest) returns (UserCreateResponse);
  rpc UserModifyStatus(UserModifyStatusRequest) returns (UserModifyStatusResponse);
  rpc AnonymousUserCreate(AnonymousUserCreateRequest) returns (UserLoginResponse);
  rpc ChangePass(UserChangePass) returns (UserCreateResponse);
  rpc UserDelete(UserDeleteRequest) returns (UserDeleteResponse);
  rpc GetTeam(GetTeamRequest) returns (Team);
  rpc CreateTeam(CreateTeamRequest) returns (Team);
  rpc TeamDelete(TeamDeleteRequest) returns (TeamDeleteResponse);
  rpc AddTeamMembers(ModifyTeamMembersRequest) returns (google.protobuf.Empty);
  rpc RemoveTeamMembers(ModifyTeamMembersRequest) returns (google.protobuf.Empty);
  rpc ValidateAccessToken(ValidateAccessTokenRequest) returns (ValidateAccessTokenResponse);
  rpc InvitationDelete(InvitationDeleteRequest) returns (InvitationDeleteResponse);
  rpc InviteUserToTeam(InviteUserToTeamRequest) returns (InviteUserToTeamResponse);
  rpc SwitchParentTeam(SwitchParentTeamRequest) returns (Team);
}
